chaos-mesh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chaos-mesh-ingress
  namespace: chaos-testing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: chaos-mesh.shukawam.com
    http:
      paths:
      - backend:
          service:
            name: chaos-dashboard
            port:
              number: 80
        path: /
        pathType: Prefix
